--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,9 @@
-aiohappyeyeballs==2.4.6
-aiohttp==3.11.13
-aiosignal==1.3.2
-APScheduler==3.11.0
-async-timeout==5.0.1
-asyncio==3.4.3
-attrs==25.1.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-discord-ext-voice-recv==0.4.2a145
 discord.py==2.4.0
-frozenlist==1.5.0
-idna==3.10
-multidict==6.1.0
-numpy==2.2.3
-propcache==0.3.0
-pycparser==2.22
-PyNaCl==1.5.0
-python-dateutil==2.9.0.post0
+discord-ext-voice-recv==0.4.2a145
 python-dotenv==1.0.1
-PyYAML==6.0.2
-requests==2.32.3
-six==1.17.0
-typing_extensions==4.12.2
-tzdata==2025.1
-tzlocal==5.3
-urllib3==2.3.0
 websockets==13.1
-yarl==1.18.3
+asyncio==3.4.3
+requests==2.32.3
+pyyaml==6.0.2
+websockets==13.1
+apscheduler==3.11.0
