--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
-jaison-api-endpoint: "http://localhost:5001"
-jaison-ws-endpoint: "ws://localhost:5001"
+jaison-api-endpoint: "http://127.0.0.1:7272"
+jaison-ws-endpoint: "ws://127.0.0.1:7272"
 opus-filepath: null
